// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Recording /> with agentRecordingEnabled and false preventAgentRecordingUpdate in toolbarMode renders correctly 1`] = `
<div
  id="recordingContainer"
  style={
    Object {
      "fontSize": "12px",
      "fontWeight": "bold",
      "position": "absolute",
      "right": "20px",
    }
  }
>
  <div>
    <FormattedMessage
      defaultMessage="REC"
      id="app.containers.PhoneControls.rec"
      values={Object {}}
    />
  </div>
  <Toggle
    checked={false}
    icons={false}
    id="toggleRecording"
    onChange={[Function]}
  />
</div>
`;

exports[`<Recording /> with agentRecordingEnabled and false preventAgentRecordingUpdate not in toolbarMode renders correctly 1`] = `
<div
  id="recordingContainer"
  style={
    Object {
      "padding": "0 12px 14px",
    }
  }
>
  <span
    style={
      Object {
        "fontSize": "14px",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Recording"
      id="app.containers.PhoneControls.recording"
      values={Object {}}
    />
  </span>
  <span
    style={
      Object {
        "float": "right",
        "height": 20,
        "marginTop": 2,
        "verticalAlign": "top",
      }
    }
  >
    <label
      htmlFor="toggleRecording"
      style={
        Object {
          "fontSize": "12px",
          "lineHeight": "21px",
          "marginRight": "3px",
          "verticalAlign": "top",
        }
      }
    >
      <FormattedMessage
        defaultMessage="OFF"
        id="app.containers.PhoneControls.off"
        values={Object {}}
      />
    </label>
    <Toggle
      checked={false}
      icons={false}
      id="toggleRecording"
      onChange={[Function]}
    />
  </span>
</div>
`;

exports[`<Recording /> with agentRecordingEnabled false renders nothing 1`] = `""`;

exports[`<Recording /> with preventAgentRecordingUpdate renders nothing 1`] = `""`;
